...
        style: TextStyle(fontWeight: FontWeight.bold),
      ));
      for (var i = 0; i < savedFoodList.length; i++) {
        var currentItem = savedFoodList[i];
        var text = (i + 1).toString() +
            ': ' +
            currentItem['name'] +
            (currentItem['description'] != null
                ? ' - ' + currentItem['description']
                : '');
        widgets.add(Text(text));

        if (i + 1 != savedFoodList.length) {
          widgets.add(Container(
...
