...
          ifAbsent: () => 1,
        );
        if (products[event.product] < 1) {
          products.remove(event.product);
        }
        yield CartChangedSate(
          quantity: _getProductsQuantity(),
          cartTotal: _getCartTotal(),
          products: products,
        );
      }
    } catch (error) {
      yield ErrorState();
...
